# ECCO-Dataset-Production

./: .env  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Dockerfile_ecco_dataset_production_build.sh  Dockerfile_edp_create_factors_V4r4  Dockerfile_edp_create_factors_V4r4_build.sh  Dockerfile_edp_create_factors_V4r5  Dockerfile_edp_create_factors_V4r5_build.sh  LICENSE  README.md  demo_mapping_factors.ipynb  docker-compose.aws.yaml  docker-compose.dev.yaml  pyproject.toml
document_generator/: .gitignore  README.md  a_step1_download_granules.py  a_step2_generate_document.py  a_step3_compile_latex.py  cdf_extract.py  cdf_plotter.py  first_try_rst.rst  index.rst  main.py  pyproject.toml  readJSON.py  step1_download_granules.py  step2_generate_document.py  utils.py
document_generator/.rst_generation_zip_files/original_python_files_before_claude/: a_step2_generate_document.py
document_generator/config_files/config_files_v4r4/: config_static_v4r4.yaml  config_user_v4r4.yaml
document_generator/data/: ECCO_global_Attrs_name.json  global_attrs_GDS20r5.json
document_generator/docs/: cli.rst
document_generator/docs/source/: conf.py  document_generator.rst  document_generator.utils.rst  index.rst
document_generator/document/: ECCO_V4r4_Dataset_Catalog_and_Variable_Compendium.aux  ECCO_V4r4_Dataset_Catalog_and_Variable_Compendium.fdb_latexmk  ECCO_V4r4_Dataset_Catalog_and_Variable_Compendium.fls  ECCO_V4r4_Dataset_Catalog_and_Variable_Compendium.lof  ECCO_V4r4_Dataset_Catalog_and_Variable_Compendium.lot  ECCO_V4r4_Dataset_Catalog_and_Variable_Compendium.out  ECCO_V4r4_Dataset_Catalog_and_Variable_Compendium.tex  ECCO_V4r4_Dataset_Catalog_and_Variable_Compendium.toc  final_doc.aux  final_doc.fdb_latexmk  final_doc.fls  final_doc.lof  final_doc.lot  final_doc.out  final_doc.synctex(busy)  final_doc.tex  final_doc.toc  texput.fls
document_generator/document/latex/: ECCO_overview.tex  ECCO_team.tex  LOF.tex  acry_abbrev_list.tex  app_ref_docs.tex  closing_statement.tex  doc_management_policies.tex  doc_records.tex  document_conventions.tex  executive_summary.tex  filenames_conventions.tex  front_pages.tex  metadata_specification.tex  preamble.tex  scope_content_doc.tex
document_generator/files_general/.notes_and_documentation/: download_instructions.txt
document_generator/general/.z_backup_do_not_change/: ECCO_V4r4_Dataset_Catalog_and_Variable_Compendium.tex
document_generator/general/.z_document_generator_unsure_if_useful_or_trash/: CoordsDimsVarsAttrs_GDS20r5.json  cdf_plotter_INSANE.py  cdf_plotter_OdilonBespoke.py
document_generator/general/utility_scripts/: cdf_extract.py  cdf_plotter.py  cdf_plotter_ojh.py  cdf_reader.py  latex_outline.py  readJSON.py  utils_docgen.py  utils_general.py  utils_json.py
document_generator/general/z_testing/: wget_subprocess_test.py  wget_test_2.py
document_generator/general/z_unsure_if_used/: cdf_plotter.py
document_generator/granule_datasets/: ECCOv4r4_groupings_for_1D_datasets.json  ECCOv4r4_groupings_for_latlon_datasets.json  ECCOv4r4_groupings_for_native_datasets.json  data_version.json  data_version.py  download_granules.py  download_instructions.txt  latlon_coords.json  natives.txt
document_generator/granule_datasets/latlon/: OCEAN_AND_ICE_SURFACE_FW_FLUX_day_mean_2017-12-29_ECCO_V4r4_latlon_0p50deg.nc  OCEAN_AND_ICE_SURFACE_HEAT_FLUX_day_mean_2017-12-29_ECCO_V4r4_latlon_0p50deg.nc  OCEAN_BOTTOM_PRESSURE_day_mean_2017-12-29_ECCO_V4r4_latlon_0p50deg.nc  OCEAN_MIXED_LAYER_DEPTH_day_mean_2017-12-29_ECCO_V4r4_latlon_0p50deg.nc
document_generator/granule_datasets/v4r4/: ECCOv4r4_groupings_for_latlon_datasets.json  latlon.txt  latlon_coords.txt  native_coords.json  natives_coords.txt  oneD.txt
document_generator/guid_doc/: instructions.md
document_generator/guid_doc_Jose_Gonzalez/: instructions.md
document_generator/images/Figure_for_PODAAC/: Make_Fig_for_PODAAC.ipynb  Make_Fig_for_PODAAC.py  cdf_plotter_ojh.py
document_generator/sections/: dataset_sections.py  latex_outline.py  latex_outline_originalWithCommentedFunctions.py
document_generator/sections/x_originals_before_bruce_mods/: og_dataset_sections_originalWithCommentedFunctions.py
document_generator/z_bruce_supplementary/: .how_to.txt.swp  how_to.txt
document_generator/z_config_files/v4r4/: config_static.yaml  config_user.yaml
document_generator/z_scratch/: collect_attributes_from_granules_and_document.py  collect_attributes_from_granules_and_document_v2.py  get_all_granule_attributes.py
document_generator/z_scratch/from_web/: attrs_from_web_global.txt  parse_attributes_from_web.py
document_generator/z_supplementary_documentation/: requirements.txt
document_generator/z_supplementary_documentation/z_bruce_supplementary/: .how_to.txt.swp  how_to.txt
document_generator/z_utility_scripts/: cdf_extract.py  cdf_plotter_ojh.py  download_granules.py  latex_outline.py  readJSON.py  utils_docgen.py
document_generator/z_utility_scripts/sections/: dataset_sections.py  latex_outline.py
processing/: README.md  ecr_push.sh  pyproject.toml
processing/configs/: README.md  aws_config.yaml  install_requirements_yml_line_by_line.sh  jobs.txt  product_generation_config.yaml  product_generation_config_updated.yaml  requirements.txt  requirements.yml  requirements_subset.yml
processing/ecco_grids/V4r4/: AngleSN.data  DRC.data  DRF.data  RAW.data  RF.data
processing/metadata/: README.md
processing/misc_scripts/: load_and_scatter_json_tasks.py  s3_costs.py
processing/src/: README.md  ecco_gen_for_podaac.py  ecco_gen_for_podaac_cloud.py  master_script.py  setup.py
processing/src/ecco_code/: __init__.py
processing/src/ecco_dataset_production/: ECCOMappingFactors.py  __init__.py  configuration.py  ecco_aws.py  ecco_aws_s3_cp.py  ecco_aws_s3_sync.py  ecco_dataset.py  ecco_file.py  ecco_gen_for_podaac.py  ecco_generate_dataproducts.py  ecco_grid.py  ecco_mapping_factors.py  ecco_task.py  ecco_time.py
processing/tests/: test_ecco_file.py  test_ecco_time.py
production_src/: pyproject.toml
production_src/tests/: test_ecco_file.py
(+1145 files in other folders)
