[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'ecco_dataset_production'
version = '1.0'
requires-python = '>=3.13'
dependencies = [
    'boto3~=1.43.0',
    'beautifulsoup4~=4.15.0',
    'importlib.resources',
    'lxml~=6.1.0',
    'netCDF4~=1.7.0',
    'numpy~=2.5.0',
    'requests~=2.34.0',
    'scipy~=1.18.0',
    'sphinx-rtd-theme~=3.1.0',
    'xarray~=2026.4.0',
    'xmitgcm~=0.5.0',
    'xgcm~=0.9.0',
    'yamale~=5.2.0',
    'ecco_cloud_utils @ git+https://github.com/ECCO-GROUP/ECCO-ACCESS/#subdirectory=ecco-cloud-utils',
    'ecco_v4_py @ git+https://github.com/ECCO-GROUP/ECCOv4-py'
]

[project.optional-dependencies]
dev = [
    'flake8~=7.3.0',
    'pylint~=4.0.0',
    'pytest~=9.1.0',
    'pytest-cov~=7.1.0'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ecco_dataset_production" = ["configs/*"]

[project.scripts]
edp_aws_s3_sync             = 'ecco_dataset_production.apps.aws_s3_sync:main'
edp_create_factors          = 'ecco_dataset_production.apps.create_factors:main'
edp_create_job_files        = 'ecco_dataset_production.apps.create_job_files:main'
edp_create_job_task_list    = 'ecco_dataset_production.apps.create_job_task_list:main'
edp_generate_datasets       = 'ecco_dataset_production.apps.generate_datasets:main'
edp_subset_tasklists        = 'ecco_dataset_production.apps.subset_tasklists:main'

