[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'ecco_dataset_production'
version = '1.0'
dependencies = [
    'boto3',
    'cartopy',
    'matplotlib',
    'netCDF4',
    'numpy',
    'pyresample',
    'scipy',
    'xarray',
    'xmitgcm',
    'xgcm',
    'ecco_cloud_utils @ git+https://github.com/ECCO-GROUP/ECCO-ACCESS/#subdirectory=ecco-cloud-utils',
]

[project.scripts]
edp                 = 'ecco_dataset_production.bin.master_script:main'
edp_aws_s3_sync     = 'ecco_dataset_production.bin.aws_s3_sync:main'
edp_create_factors  = 'ecco_dataset_production.bin.create_factors:main'

